--- a/scss/components/_soe_page.scss
+++ b/scss/components/_soe_page.scss
@@ -195,6 +195,28 @@
       h2 {
         font-size: em(26px);
         letter-spacing: 0;
+
+        @include breakpoint-max(small-med) {
+
+          font-size: 1em;
+        }
+
+        @include breakpoint-max(smaller) {
+
+          font-size: .8em;
+        }
+      }
+
+      h3 {
+        @include breakpoint-max(small-med) {
+
+          font-size: 1em;
+        }
+
+        @include breakpoint-max(smaller) {
+
+          font-size: .8em;
+        }
       }
 
       a {
@@ -249,6 +271,10 @@
     .page-cta-link-container.right {
       float: left;
       width: 100%;
+    }
+
+    .views-row {
+      margin-bottom: 0;
     }
   }
 }
